# update-beetroot

./: Dockerfile  pyproject.toml  requirements.txt
src/: mdb.sh
src/akyc/: admin.py  apps.py  consumers.py  forms.py  models.py  serializers.py  urls.py  views.py
src/akyc/migrations/: 0001_initial.py  0002_initial.py
src/akyc/profile/: profile_forms.py
src/akyc/profile/profile_add/: views.py
src/akyc/profile/profile_delete/: views.py
src/akyc/profile/profile_detail/: views.py
src/akyc/profile/profile_list/: views.py
src/akyc/profile/profile_update/: views.py
src/akyc/templates/: app_user_new_account.html  app_user_profile_list.html  app_user_view_add_profile.html
src/akyc/templates/profile/: profile_all.html  profile_details_overview.html
src/auth/: urls.py
src/auth/forgot_password/: views.py
src/auth/login/: views.py
src/auth/register/: views.py
src/auth/reset_password/: views.py
src/auth/verify_email/: views.py
src/backend/: admin.py  api.py  asgi.py  models.py  routing.py  settings.py  template.py  urls.py
src/backend/management/commands/: initadmin.py
src/backend/migrations/: 0001_initial.py
src/business/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/business/migrations/: 0001_initial.py
src/business/templates/: app_business_producer_add.html  app_business_producer_list.html  app_business_service_add.html  app_business_service_list.html
src/chat/: tests.py  urls.py  views.py
src/dashboards/: admin.py  sites.py  urls.py  views.py
src/media/images/business/assets/banner/: beef_farming_banner  heloi_banner
src/publishing/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  wagtail_hooks.py
src/publishing/migrations/: 0001_initial.py  0002_responsesection_questionnaire_id_and_more.py  0003_articlesharingtags.py
src/publishing/static/css/: custom.css
src/publishing/templates/blog/: add_answer.html  blog_index_page.html  blog_page.html  question_page.html  questionnaire_page.html
src/publishing/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
src/publishing/templates/wagtailadmin/userbar/: base.html
src/src/assets/js/: abattoir-producer-all.js  abattoir-producer-detail.js  akyc-profile-detail.js  akyc-profile-list.js  app-ecommerce-customer-all.js  app-user-list.js  config.js
src/src/assets/json/: ecommerce-customer-all.json
src/src/libs/toastr/: toastr.scss
src/static/djangoql/css/: completion.aa54c7823b3d.css
src/static/djangoql/js/: completion.61da6f44de3e.js
src/static/wagtailadmin/css/: core.css
src/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
src/templates/layout/partials/footer/: footer_front.html
src/templates/layout/partials/menu/horizontal/json/: horizontal_menu.json  sample.json
src/templates/layout/partials/menu/vertical/: vertical_menu.html
src/templates/layout/partials/menu/vertical/json/: vertical_menu.json
src/templates/layout/partials/navbar/: navbar.html  navbar_front.html
src/templates/partials/: logo.html
